# acta-poc

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.cursor/rules/: documentation-sync.mdc
circuits/anchor/: OpenACCredentialAnchor.circom
circuits/lib/: MerkleProof.circom  NullifierDerive.circom  PostfixEval.circom  PredicateEval.circom
circuits/presentation/: OpenACGPPresentation.circom  OpenACGPPresentationV2.circom
docs/: API_REFERENCE.md  ARCHITECTURE.md  FLOW.md  PM_AGENT_PROMPT.md  PM_GUIDE.md  ROADMAP.md  SECURITY_AUDIT.md  SPEC.md  protocol-diagram.html
docs/adr/: 0001-zkid-generalized-predicates.md  0002-stealth-addresses-for-unlinkability.md  0003-anchor-by-holder-commitment.md  0004-acta-sdk-package.md
docs/diagrams/: generalized-predicates-flow.mermaid  issuance-flow.mermaid  onchain-execution-flow.mermaid  stealth-presentation-flow.mermaid  system-overview.mermaid  verification-flow.mermaid
openac-sdk/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
openac-sdk/assets/: witness_calculator.js
openac-sdk/scripts/: build-wasm.sh
openac-sdk/src/: credential.ts  errors.ts  index.ts  native-backend.ts  prover.ts  types.ts  utils.ts  verifier.ts  wasm-bridge.ts  witness-calculator.ts
openac-sdk/src/inputs/: jwt-input-builder.ts  show-input-builder.ts
openac-sdk/tests/: credential.test.ts  e2e.test.ts  native-backend.test.ts  wasm-1k-pipeline.test.ts  wasm-verifier.test.ts  witness-calculator.test.ts
openac-sdk/wasm/: Cargo.toml
openac-sdk/wasm/src/: lib.rs
