[package]
name = "openac-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for OpenAC zero-knowledge proving system"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Disable native-witness feature for WASM - witnesses are generated in JavaScript
ecdsa-spartan2 = { path = "../../ecdsa-spartan2", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
bincode = "1.3.3"
getrandom = { version = "0.2", features = ["js"] }
ff = { version = "0.13.0", features = ["derive"] }
spartan2 = { git = "https://github.com/0xVikasRushi/Spartan2.git", branch = "openac-sdk", default-features = false }
console_error_panic_hook = "0.1"
rand = "0.8"

[profile.release]
opt-level = "s"
lto = true
